# CoalicionGM

./: .gitignore  README.md
CGM/: CMakeLists.txt  CMakePresets.json
CGM/src/: functions.h  main.cpp
